# matrix_format_performance

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
common/: CMakeLists.txt  matrix_converter.cpp  matrix_converter.h  measurement_class.cpp  measurement_class.h  scoo_matrix_class.cpp  scoo_matrix_class.h
cpu/: CMakeLists.txt  cpu_matrix_multiplier.cpp  cpu_matrix_multiplier.h
doc/: Makefile  post.tex
gpu/: CMakeLists.txt  csr_adaptive_spmv.cu  csr_adaptive_spmv.h  gpu_matrix_multiplier.cpp  gpu_matrix_multiplier.cu  gpu_matrix_multiplier.h  reduce.cuh  resizable_gpu_memory.cpp  resizable_gpu_memory.h  scoo_spmv.cu  scoo_spmv.h
materials/cusp-library/.hg/: dirstate  hgrc  undo.desc
materials/cusp-library/.hg/cache/: branchheads  hgtagsfnodes1  tags  tags2-visible
materials/cusp-library/.hg/store/: 00changelog.i  00manifest.d  00manifest.i  fncache  undo
materials/cusp-library/.hg/store/data/: _c_h_a_n_g_e_l_o_g.i  _l_i_c_e_n_s_e.i  _r_e_a_d_m_e.i  ~2ehgignore.i  ~2ehgtags.i  ~2esvnignore.i
materials/cusp-library/.hg/store/data/cusp/: arithmetic.h.i  array1d.h.i  array2d.h.i  blas.h.i  cmath.h.i  complex.h.i  convert.h.i  coo__matrix.h.i  copy.h.i  csr__matrix.h.i  dense__matrix.h.i  dia__matrix.h.i  elementwise.h.i  ell__matrix.h.i  equal.h.i  exception.h.i  format.h.i  hyb__matrix.h.i  io.h.i  linear__operator.h.i  matrix__shape.h.i  memory.h.i  monitor.h.i  multiply.h.i  print.h.i  spblas.h.i  stopping__criteria.h.i  transpose.h.i  valid.h.i  vector.h.i  verify.h.i  version.h.i
materials/cusp-library/.hg/store/data/cusp/detail/: array1d.inl.i  array2d.inl.i  blas.inl.i  config.h.i  convert.h.i  convert.inl.i  coo__matrix.inl.i  copy.inl.i  csr__matrix.inl.i  dia__matrix.inl.i  elementwise.inl.i  ell__matrix.inl.i  format__utils.h.i  format__utils.inl.i  forward__definitions.h.i  functional.h.i  hyb__matrix.inl.i  io.inl.i  lu.h.i  matrix__base.h.i  matrix__shape.h.i  matrix__traits.h.i  matrix__traits.inl.i  memory.inl.i  multiply.inl.i  print.inl.i  profiler.h.i  profiler.inl.i  random.h.i  random.inl.i  spblas.inl.i  spectral__radius.h.i  spmv.h.i  spmv.inl.i  timer.h.i  transpose.inl.i  utils.h.i  valid.inl.i  verify.inl.i
materials/cusp-library/.hg/store/data/cusp/device/: common.h.i  elementwise__operation.h.i  spmv.h.i  spmv__coo.h.i  spmv__coo__flat.h.i  spmv__coo__serial.h.i  spmv__csr.h.i  spmv__csr__scalar.h.i  spmv__csr__vector.h.i  spmv__dia.h.i  spmv__ell.h.i  spmv__hyb.h.i  texture.h.i  utils.h.i
materials/cusp-library/.hg/store/data/cusp/gallery/: diffusion.h.i  poisson.h.i  random.h.i  stencil.h.i  stencil.inl.i
materials/cusp-library/.hg/store/data/examples/: _s_construct.i  cg.cu.i
materials/cusp-library/.hg/store/data/media/: cusp__logo.odg.i  cusp__logo.png.i  cusp__tn.png.i
materials/cusp-library/.hg/store/data/performance/: _s_construct.i  benchmark.h.i  bytes__per__spmv.h.i  csr__vector.cu.i  gallery.h.i  spmv.cu.i  timer.h.i  utility.h.i
materials/cusp-library/.hg/store/data/testing/: _s_construct.i  ainv.cu.i  amg.cu.i  arithmetic.cu.i  array1d.cu.i  array1d__view.cu.i  array2d.cu.i  array2d__view.cu.i  bicgstab.cu.i  blas.cu.i  cg.cu.i  cg__m.cu.i  classical__amg.cu.i  complex.cu.i  convert.cu.i  coo__matrix.cu.i  coo__matrix__view.cu.i  csr__matrix.cu.i  csr__matrix__view.cu.i  dense__matrix.cu.i  dia__matrix.cu.i  dia__matrix__view.cu.i  diagonal.cu.i  diffusion.cu.i  elementwise.cu.i  ell__matrix.cu.i  ell__matrix__view.cu.i  equal.cu.i  format.cu.i  format__utils.cu.i  gemm.cu.i  generalized__spmv.cu.i  hyb__matrix.cu.i  hyb__matrix__view.cu.i  io.cu.i  jacobi.cu.i  linear__operator.cu.i  linsolve.cu.i  lu.cu.i  matrix__market.cu.i  (+23 more)
materials/cusp-library/cusp/: complex.h
results/: double.csv  double.json  double_effective_bandwidth.json  float.json  float_computational_throughput.json  matrices_info.json
results/hybrid/: double.json  double_computational_throughput.json  float_effective_bandwidth.json
results/mkl_ht_0/: float.json  float_computational_throughput.json  float_effective_bandwidth.json  matrices_info.json
results/mkl_ht_0_tb_0/: double.json  double_computational_throughput.json  double_effective_bandwidth.json
results/mkl_ht_1_tb_1/: double.json  double_computational_throughput.json  double_effective_bandwidth.json  float.json  float_computational_throughput.json  float_effective_bandwidth.json
results/scoo/: double.json  double_computational_throughput.json  double_effective_bandwidth.json  float.json  float_computational_throughput.json  float_effective_bandwidth.json  matrices_info.json
scripts/: analyze.py  fix_clock.sh  reset_clock.sh
(+250 files in other folders)
